[#2447] Layout bug fixes

--- a/akvo/rsr/static/styles-src/results.scss
+++ b/akvo/rsr/static/styles-src/results.scss
@@ -4296,6 +4296,7 @@ div.iatiFilters {
 
                                     span {
                                         color: initial;
+                                        margin-left: 4px;
                                     }
                                 }
 
